z-index safari browser issue

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -65,9 +65,9 @@
     @apply px-2 sm:px-4 md:px-8 lg:px-10;
   }
 
-  .safari-fix {
+  /* .safari-fix {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
     z-index: 1000;
-  }
+  } */
 }
